--- a/portfolio.html
+++ b/portfolio.html
@@ -161,12 +161,30 @@
             <ul class="works-list list">
               <li class="works-item">
                 <div class="works-cover-wrap">
-                  <img
-                    src="./images/portfolio-work1.jpg"
-                    alt="технокряк"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio-work1.jpg    1x,
+                        ./images/portfolio-work1-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work1-tab.jpg    1x,
+                        ./images/portfolio-work1-tab-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work1-mob.jpg    1x,
+                        ./images/portfolio-work1-mob-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img src="./images/portfolio-work1.jpg" alt="технокряк" />
+                  </picture>
                   <p class="works-over-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -180,12 +198,30 @@
               </li>
               <li class="works-item">
                 <div class="works-cover-wrap">
-                  <img
-                    src="./images/portfolio-work2.jpg"
-                    alt="постер"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio-work2.jpg    1x,
+                        ./images/portfolio-work2-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work2-tab.jpg    1x,
+                        ./images/portfolio-work2-tab-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work2-mob.jpg    1x,
+                        ./images/portfolio-work2-mob-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img src="./images/portfolio-work2.jpg" alt="постер" />
+                  </picture>
                   <p class="works-over-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -199,12 +235,30 @@
               </li>
               <li class="works-item">
                 <div class="works-cover-wrap">
-                  <img
-                    src="./images/portfolio-work3.jpg"
-                    alt="ресторан"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio-work3.jpg    1x,
+                        ./images/portfolio-work3-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work3-tab.jpg    1x,
+                        ./images/portfolio-work3-tab-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work3-mob.jpg    1x,
+                        ./images/portfolio-work3-mob-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img src="./images/portfolio-work3.jpg" alt="ресторан" />
+                  </picture>
                   <p class="works-over-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -218,12 +272,33 @@
               </li>
               <li class="works-item">
                 <div class="works-cover-wrap">
-                  <img
-                    src="./images/portfolio-work4.jpg"
-                    alt="проект prime"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio-work4.jpg    1x,
+                        ./images/portfolio-work4-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work4-tab.jpg    1x,
+                        ./images/portfolio-work4-tab-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work4-mob.jpg    1x,
+                        ./images/portfolio-work4-mob-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/portfolio-work4.jpg"
+                      alt="проект prime"
+                    />
+                  </picture>
                   <p class="works-over-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -237,12 +312,33 @@
               </li>
               <li class="works-item">
                 <div class="works-cover-wrap">
-                  <img
-                    src="./images/portfolio-work5.jpg"
-                    alt="проект boxes"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio-work5.jpg    1x,
+                        ./images/portfolio-work5-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work5-tab.jpg    1x,
+                        ./images/portfolio-work5-tab-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work5-mob.jpg    1x,
+                        ./images/portfolio-work5-mob-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/portfolio-work5.jpg"
+                      alt="проект boxes"
+                    />
+                  </picture>
                   <p class="works-over-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -256,12 +352,33 @@
               </li>
               <li class="works-item">
                 <div class="works-cover-wrap">
-                  <img
-                    src="./images/portfolio-work6.jpg"
-                    alt="вебсайт inspiration"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio-work6.jpg    1x,
+                        ./images/portfolio-work6-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work6-tab.jpg    1x,
+                        ./images/portfolio-work6-tab-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work6-mob.jpg    1x,
+                        ./images/portfolio-work6-mob-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/portfolio-work6.jpg"
+                      alt="вебсайт inspiration"
+                    />
+                  </picture>
                   <p class="works-over-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -275,12 +392,30 @@
               </li>
               <li class="works-item">
                 <div class="works-cover-wrap">
-                  <img
-                    src="./images/portfolio-work7.jpg"
-                    alt="издание"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio-work7.jpg    1x,
+                        ./images/portfolio-work7-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work7-tab.jpg    1x,
+                        ./images/portfolio-work7-tab-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work7-mob.jpg    1x,
+                        ./images/portfolio-work7-mob-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img src="./images/portfolio-work7.jpg" alt="издание" />
+                  </picture>
                   <p class="works-over-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -294,12 +429,30 @@
               </li>
               <li class="works-item">
                 <div class="works-cover-wrap">
-                  <img
-                    src="./images/portfolio-work8.jpg"
-                    alt="проект lab"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio-work8.jpg    1x,
+                        ./images/portfolio-work8-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work8-tab.jpg    1x,
+                        ./images/portfolio-work8-tab-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work8-mob.jpg    1x,
+                        ./images/portfolio-work8-mob-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img src="./images/portfolio-work8.jpg" alt="проект lab" />
+                  </picture>
                   <p class="works-over-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
@@ -313,12 +466,33 @@
               </li>
               <li class="works-item">
                 <div class="works-cover-wrap">
-                  <img
-                    src="./images/portfolio-work9.jpg"
-                    alt="приложение growing"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio-work9.jpg    1x,
+                        ./images/portfolio-work9-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work9-tab.jpg    1x,
+                        ./images/portfolio-work9-tab-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio-work9-mob.jpg    1x,
+                        ./images/portfolio-work9-mob-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      src="./images/portfolio-work9.jpg"
+                      alt="приложение growing"
+                    />
+                  </picture>
                   <p class="works-over-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
